iac-network/azuredeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "prefix": {
      "type": "string",
      "metadata": {
        "description": "Small unique string."
      }
    },
    "vnetPrefix": {
      "type": "string",
      "metadata": {
        "description": "Virtual Network Address Prefix CIDR"
      },
      "defaultValue": "10.1.0.0/24"
    },
    "subnet1Prefix": {
      "type": "string",
      "metadata": {
        "description": "Subnet 1 Address Prefix CIDR"
      },
      "defaultValue": "10.1.0.0/25"
    },
    "subnet2Prefix": {
      "type": "string",
      "metadata": {
        "description": "Subnet 2 Address Prefix CIDR"
      },
      "defaultValue": "10.1.0.128/26"
    },
    "subnet3Prefix": {
      "type": "string",
      "metadata": {
        "description": "Subnet 3 Prefix CIDR"
      },
      "defaultValue": "10.1.0.192/27"
    },
    "subnet4Prefix": {
      "type": "string",
      "metadata": {
        "description": "Subnet 4 CIDR"
      },
      "defaultValue": "10.1.0.224/28"
    },
    "subnet5Prefix": {
      "type": "string",
      "metadata": {
        "description": "Subnet 4 CIDR"
      },
      "defaultValue": "10.1.0.224/28"
    },
    "remoteAccessACL": {
      "type": "string",
      "metadata": {
        "description": "Remote Access CIDR"
      },
      "defaultValue": "Internet"
    }
  },
  "variables": {
    "VNetName": "[concat(parameters('prefix'), '-vnet')]",
    "VNetId": "[resourceId('Microsoft.Network/virtualNetworks', variables('VNetName'))]",
    "Subnet1Name": "web-tier",
    "SubNet1Id": "[concat(variables('VNetId'), '/subnets/', variables('Subnet1Name'))]",
    "Subnet2Name": "app-tier",
    "SubNet2Id": "[concat(variables('VNetId'), '/subnets/', variables('Subnet2Name'))]",
    "Subnet3Name": "data-tier",
    "SubNet3Id": "[concat(variables('VNetId'), '/subnets/', variables('Subnet3Name'))]",
    "Subnet4Name": "mgmt-tier",
    "SubNet4Id": "[concat(variables('VNetId'), '/subnets/', variables('Subnet4Name'))]",
    "Subnet5Name": "GatewaySubnet",
    "SubNet5Id": "[concat(variables('VNetId'), '/subnets/', variables('Subnet5Name'))]",
    "Nsg1Name": "[concat(parameters('prefix'), '-', variables('Subnet1Name'), '-nsg')]",
    "Nsg2Name": "[concat(parameters('prefix'), '-', variables('Subnet2Name'), '-nsg')]",
    "Nsg3Name": "[concat(parameters('prefix'), '-', variables('Subnet3Name'), '-nsg')]",
    "Nsg4Name": "[concat(parameters('prefix'), '-', variables('Subnet4Name'), '-nsg')]"
  },
  "resources": [{
      "comments": "## Network Security Group ##",
      "name": "[variables('nsg1Name')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2015-05-01-preview",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "Network Security Group - subnet1"
      },
      "properties": {
        "securityRules": [
          {
            "name": "default-allow-rdp",
            "properties": {
              "description": "Allow RDP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1000,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "comments": "## Network Security Group ##",
      "name": "[variables('nsg2Name')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2015-05-01-preview",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "Network Security Group - subnet2"
      },
      "properties": {
        "securityRules": [
          {
            "name": "default-allow-rdp",
            "properties": {
              "description": "Allow RDP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1000,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "comments": "## Network Security Group ##",
      "name": "[variables('nsg3Name')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2015-05-01-preview",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "Network Security Group - subnet3"
      },
      "properties": {
        "securityRules": [
          {
            "name": "default-allow-rdp",
            "properties": {
              "description": "Allow RDP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "VirtualNetwork",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1000,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "comments": "## Network Security Group ##",
      "name": "[variables('nsg4Name')]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2015-05-01-preview",
      "location": "[resourceGroup().location]",
      "tags": {
        "displayName": "Network Security Group - subnet4"
      },
      "properties": {
        "securityRules": [
          {
            "name": "default-allow-rdp",
            "properties": {
              "description": "Allow RDP",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3389",
              "sourceAddressPrefix": "[parameters('remoteAccessACL')]",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 1000,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "comments": "## Virtual Network ##",
      "name": "[variables('VNetName')]",
      "type": "Microsoft.Network/virtualNetworks",
      "apiVersion": "2016-03-30",
      "location": "[resourceGroup().location]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsg1Name'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsg2Name'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsg3Name'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsg4Name'))]"
      ],
      "tags": {
        "displayName": "Virtual Network"
      },
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('VNetPrefix')]"
          ]
        },
        "subnets": [{
            "name": "[variables('Subnet1Name')]",
            "properties": {
              "addressPrefix": "[parameters('Subnet1Prefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsg1Name'))]"
              }
            }
          },
          {
            "name": "[variables('Subnet2Name')]",
            "properties": {
              "addressPrefix": "[parameters('Subnet2Prefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsg2Name'))]"
              }
            }
          },
          {
            "name": "[variables('Subnet3Name')]",
            "properties": {
              "addressPrefix": "[parameters('Subnet3Prefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsg3Name'))]"
              }
            }
          },
          {
            "name": "[variables('Subnet4Name')]",
            "properties": {
              "addressPrefix": "[parameters('Subnet4Prefix')]",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsg4Name'))]"
              }
            }
          },
          {
            "name": "[variables('Subnet5Name')]",
            "properties": {
              "addressPrefix": "[parameters('Subnet5Prefix')]"
            }
          }
        ]
      }
    }
  ],
  "outputs": {
    "virtualNetwork": {
      "type": "object",
      "value": {
        "id": "[variables('VNetId')]",
        "name": "[variables('VNetName')]"
      }
    },
    "subnets": {
      "type": "object",
      "value": {
        "subnet1Id": "[variables('subnet1Id')]",
        "subnet2Id": "[variables('subnet2Id')]",
        "subnet3Id": "[variables('subnet3Id')]",
        "subnet4Id": "[variables('subnet4Id')]",
        "subnet5Id": "[variables('subnet5Id')]"
      }
    }
  }
}
